[package]
name = "yellowstone-grpc-convert"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
account-data-as-bytes = []

[dependencies]
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-pubkey = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction-status = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-context = { workspace = true }

carbon-core = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
bincode.workspace = true
